# aml_boilerplate

./: .env.sample  LICENSE  README.md  main.py  pyproject.toml  set_up_env.sh
pipelines/training_pipeline/: create_pipeline.py
pipelines/training_pipeline/steps/: train.py
pipelines/utils/: compute.py  environment.py  pipeline_helpers.py
settings/: env_vars.py  packages.py
